src/styles/_components.ideas.scss
.c-ideas {

  @media (min-width: $bp-md) {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

.c-ideas__heading-container {
  position: relative;
  padding-right: 4rem;

  @media (min-width: $bp-md) {
    padding-left: var(--v-page-margin);
    padding-right: 6.25rem;
  }
}

.c-ideas__heading {
  // padding-left: var(--v-page-margin);
  transform: rotate(-90deg) translate(0, -200px);
  transform-origin: top right;
  margin-bottom: 0;
  height: 100%;
  position: absolute;
  pointer-events: none;

  @media (min-width: $bp-md) {
    transform: rotate(-90deg) translate(0, -260px); 
  }
}

.c-ideas__scroll-container {
  overflow: scroll;
  width: 100%;
}

.c-ideas__list {
  display: flex;
  flex-direction: row;
  margin-top: 0;

  & li:last-child a {
    margin-right: var(--v-page-margin);
  }
}

